header color fixed on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -56,7 +56,6 @@ header .mobile {
         padding-bottom: .75em;
         z-index: 100;
         border-bottom: solid 1px #c6c1c1;
-        background-color: white;
     }
 
     header .mobile a{
@@ -96,7 +95,6 @@ header .mobile {
         padding-bottom: .75em;
         z-index: 100;
         border-bottom: solid 1px #c6c1c1;
-        background-color: white;
     }
 
     header .mobile a{
